--- a/icu4j/branches/maint/maint-52/readme.html
+++ b/icu4j/branches/maint/maint-52/readme.html
@@ -14,17 +14,12 @@ h4.doc { text-decoration: underline }
 <body style="background-color: rgb(255, 255, 255);" lang="EN-US"
  link="#0000ff" vlink="#800080">
 <h2>International Components for Unicode for Java (ICU4J)</h2>
-<h3>Read Me for ICU4J 52 Release Candidate</h3>
-(Last Update: 2013-Sep-23)
+<h3>Read Me for ICU4J 52</h3>
+(Last Update: 2013-Oct-07)
 <hr size="2" width="100%">
 
-<p><!-- <b>Note:</b> This is major release of ICU4J. It contains bug fixes and adds implementations
-of inherited API and introduces new API or functionality. -->
-<b>Note:</b> This is a release candidate version of ICU4J 52.
-The contents of this document may not reflect the recent changes done
-for ICU 52 development. This release candidate version is intended for those
-planning to integrate ICU4J 52 to software, or to evaluate new features and
-API changes. It is not recommended for production use.
+<p><b>Note:</b> This is major release of ICU4J. It contains bug fixes and adds implementations
+of inherited API and introduces new API or functionality.
 </p>
 <p>For the most recent release, see the <a
  href="http://www.icu-project.org/download/"> ICU4J
@@ -133,7 +128,7 @@ found in ICU4J.</p>
 <p>See the <a href="http://sites.google.com/site/icusite/download/52">ICU 52 download page</a>
 about new features in this release.
 The list of API changes since the previous ICU4J release is available
-<a href="http://source.icu-project.org/repos/icu/icu4j/tags/release-52-rc/APIChangeReport.html">here</a>.</p>
+<a href="http://source.icu-project.org/repos/icu/icu4j/tags/release-52-1/APIChangeReport.html">here</a>.</p>
 
 <h3 class="doc"><a name="license"></a>License Information</h3>
 <p>
@@ -157,7 +152,7 @@ mean that projects using ICU become subject to GPL.
 <p>
  The IBM version contains the essential text of the license, omitting the
 X-specific trademarks and copyright notices. The full copy of <a
- href="http://source.icu-project.org/repos/icu/icu4j/tags/milestone-52-0-1/main/shared/licenses/license.html">ICU's license</a> is included in the download
+ href="http://source.icu-project.org/repos/icu/icu4j/tags/release-52-1/main/shared/licenses/license.html">ICU's license</a> is included in the download
 package.
 </p>
 <h3 class="doc"><a name="PlatformDependencies"></a>Platform Dependencies</h3>
@@ -984,8 +979,8 @@ ICU4J data is built by ICU4C tools. Please see "icu4j-readme.txt" in <I>$icu4c_r
 <I> Note: This procedure assumes that all 3 sources are present</I>
 <ol>
     <li>Checkout or download CLDR version 'release-24'</li>
-    <li>Checkout ICU4C with tag 'release-52-rc'</li>
-    <li>Checkout ICU4J with tag 'release-52-rc'</li>
+    <li>Checkout ICU4C with tag 'release-52-1'</li>
+    <li>Checkout ICU4J with tag 'release-52-1'</li>
     <li>cd to <I>$icu4c_root</I>/source/data directory</li>
     <li>Follow the instructions in <I>$icu4c_root</I>/source/data/cldr-icu-readme.txt</li>
     <li>Rebuild ICU4C with the newly generated data.</li>
@@ -997,7 +992,7 @@ ICU4J data is built by ICU4C tools. Please see "icu4j-readme.txt" in <I>$icu4c_r
 </ol>
 
 <h3 class="doc"><a name="timezone"></a>About ICU4J Time Zone</h3>
-<p>ICU4J 52rc includes time zone data version 2013e, which is the latest one as of
+<p>ICU4J 52.1 includes time zone data version 2013g, which is the latest one as of
 the release date. However, time zone data is frequently updated in response
 to changes made by local governments around the world.  If you need to update
 the time zone data, please refer the ICU user guide topic
