--- a/icu4j/trunk/readme.html
+++ b/icu4j/trunk/readme.html
@@ -5,7 +5,7 @@
   <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
   <meta http-equiv="Content-Style-Type" content="text/css2">
   <title>ReadMe for ICU4J</title>
-  <meta name="COPYRIGHT" content="Copyright 2000-2013, International Business Machines Corporation and others. All Rights Reserved.">
+  <meta name="COPYRIGHT" content="Copyright 2000-2014, International Business Machines Corporation and others. All Rights Reserved.">
   <style type="text/css">
 h3.doc { background: #CCCCFF }
 h4.doc { text-decoration: underline }
@@ -14,17 +14,17 @@ h4.doc { text-decoration: underline }
 <body style="background-color: rgb(255, 255, 255);" lang="EN-US"
  link="#0000ff" vlink="#800080">
 <h2>International Components for Unicode for Java (ICU4J)</h2>
-<h3>Read Me for ICU4J 52 Release Candidate</h3>
-(Last Update: 2013-Sep-23)
+<h3>Read Me for ICU4J 53 Milestone 1</h3>
+(Last Update: 2014-Jan-17)
 <hr size="2" width="100%">
 
 <p><!-- <b>Note:</b> This is major release of ICU4J. It contains bug fixes and adds implementations
 of inherited API and introduces new API or functionality. -->
-<b>Note:</b> This is a release candidate version of ICU4J 52.
+<b>Note:</b> This is a development release version of ICU4J 53.
 The contents of this document may not reflect the recent changes done
-for ICU 52 development. This release candidate version is intended for those
-planning to integrate ICU4J 52 to software, or to evaluate new features and
-API changes. It is not recommended for production use.
+for ICU 53 development. This milestone is intended for those wishing
+to get an early look at ICU4J 53 new features and API changes. It is not
+recommended for production use.
 </p>
 <p>For the most recent release, see the <a
  href="http://www.icu-project.org/download/"> ICU4J
@@ -130,10 +130,10 @@ found in ICU4J.</p>
 
 <h3 class="doc"><a name="changes"></a>Changes In This Release</h3>
 
-<p>See the <a href="http://sites.google.com/site/icusite/download/52">ICU 52 download page</a>
+<p>See the <a href="http://sites.google.com/site/icusite/download/milestone">ICU development milestone download page</a>
 about new features in this release.
 The list of API changes since the previous ICU4J release is available
-<a href="http://source.icu-project.org/repos/icu/icu4j/tags/release-52-rc/APIChangeReport.html">here</a>.</p>
+<a href="http://source.icu-project.org/repos/icu/icu4j/tags/milestone-53-0-1/APIChangeReport.html">here</a>.</p>
 
 <h3 class="doc"><a name="license"></a>License Information</h3>
 <p>
@@ -157,12 +157,12 @@ mean that projects using ICU become subject to GPL.
 <p>
  The IBM version contains the essential text of the license, omitting the
 X-specific trademarks and copyright notices. The full copy of <a
- href="http://source.icu-project.org/repos/icu/icu4j/tags/milestone-52-0-1/main/shared/licenses/license.html">ICU's license</a> is included in the download
+ href="http://source.icu-project.org/repos/icu/icu4j/tags/milestone-53-0-1/main/shared/licenses/license.html">ICU's license</a> is included in the download
 package.
 </p>
 <h3 class="doc"><a name="PlatformDependencies"></a>Platform Dependencies</h3>
 <p>
-ICU4J 52 depends on J2SE 5.0 functionality.  Therefore, ICU4J only runs on
+ICU4J 53 depends on J2SE 5.0 functionality.  Therefore, ICU4J only runs on
 JRE version 5.0 or later.
 The table below shows the operating systems and JRE/VM versions currently
 used by the ICU development team to test ICU4J.
@@ -841,54 +841,54 @@ from release to release, so clients should not depend on the exact
 organization
 of the data in ICU4J.</p>
 <ul>
-  <li>The primary <b>locale data</b> is under the directory <tt>icudt52b</tt>,
+  <li>The primary <b>locale data</b> is under the directory <tt>icudt53b</tt>,
   as a set of <tt>".res"</tt> files whose names are the locale identifiers. 
   Locale naming is documented the <code>com.ibm.icu.util.ULocale</code>
   class, and the use of these names in searching for resources is documented 
   in <code>com.ibm.icu.util.UResourceBundle</code>.</li>
 
-  <li>The <b>collation data</b> is under the directory <tt>icudt52b/coll</tt>,
+  <li>The <b>collation data</b> is under the directory <tt>icudt53b/coll</tt>,
   as a set of <tt>".res"</tt> files.</li>
 
-  <li>The <b>currency display name data</b> is under the directory <tt>icudt52b/curr</tt>,
+  <li>The <b>currency display name data</b> is under the directory <tt>icudt53b/curr</tt>,
   as a set of <tt>".res"</tt> files.</li>
 
-  <li>The <b>language display name data</b> is under the directory <tt>icudt52b/lang</tt>,
+  <li>The <b>language display name data</b> is under the directory <tt>icudt53b/lang</tt>,
   as a set of <tt>".res"</tt> files.</li>
 
-  <li>The <b>region display name data</b> is under the directory <tt>icudt52b/region</tt>,
+  <li>The <b>region display name data</b> is under the directory <tt>icudt53b/region</tt>,
   as a set of <tt>".res"</tt> files.</li>
 
   <li>The <b>rule-based transliterator data</b> is under the directory
-  <tt>icudt52b/translit</tt>, as a set of <tt>".res"</tt> files.</li>
+  <tt>icudt53b/translit</tt>, as a set of <tt>".res"</tt> files.</li>
 
   <li>The <b>rule-based number format data</b> is under the directory
-  <tt>icudt52b/rbnf</tt>, as a set of <tt>".res"</tt> files.
+  <tt>icudt53b/rbnf</tt>, as a set of <tt>".res"</tt> files.
 
   <li>The <b>break iterator data</b> is directly under the
-  directory <tt>icudt52b</tt>, as a set of <tt>".brk"</tt> files, named according to the
+  directory <tt>icudt53b</tt>, as a set of <tt>".brk"</tt> files, named according to the
   type of break and the locale where there are locale-specific versions.</li>
 
-  <li>The <b>holiday data</b> is under the directory <tt>icudt52b</tt>,
+  <li>The <b>holiday data</b> is under the directory <tt>icudt53b</tt>,
   as a set of <tt>".class"</tt> files, named <tt>"HolidayBundle_"</tt>
   followed by the locale ID.</li>
 
   <li>The <b>character property data</b> and default <b>unicode collation algorithm
-  (UCA) data</b> is found under the directory <tt>icudt52b</tt>, as a set of
+  (UCA) data</b> is found under the directory <tt>icudt53b</tt>, as a set of
   <tt>".icu"</tt> files. </li>
 
-  <li>The <b>normalization data</b> is found under the directory <tt>icudt52b</tt>,
+  <li>The <b>normalization data</b> is found under the directory <tt>icudt53b</tt>,
   as a set of <tt>".nrm"</tt> files. </li>
 
   <li>The <b>character set converter data</b> is under the directory
-  <tt>icudt52b</tt>, as a set of <tt>".cnv"</tt> files.  These files are
+  <tt>icudt53b</tt>, as a set of <tt>".cnv"</tt> files.  These files are
   currently included only in icu-charset.jar.</li>
 
   <li>The <b>time zone rule data</b> is under the directory 
-  <tt>icudt52b</tt>, as <tt>zoneinfo64.res</tt>.</li>
+  <tt>icudt53b</tt>, as <tt>zoneinfo64.res</tt>.</li>
 
   <li>The <b>time zone display name data</b> is under the directory
-  <tt>icudt52b/zone</tt>, as a set of <tt>".res"</tt> files.</li>
+  <tt>icudt53b/zone</tt>, as a set of <tt>".res"</tt> files.</li>
 </ul>
 <p>
 Some of the data files alias or otherwise reference data from other
@@ -983,9 +983,9 @@ ICU4J data is built by ICU4C tools. Please see "icu4j-readme.txt" in <I>$icu4c_r
 <h5> Generating Data from CLDR </h5>
 <I> Note: This procedure assumes that all 3 sources are present</I>
 <ol>
-    <li>Checkout or download CLDR version 'release-24'</li>
-    <li>Checkout ICU4C with tag 'release-52-rc'</li>
-    <li>Checkout ICU4J with tag 'release-52-rc'</li>
+    <li>Checkout or download CLDR version 'release-25-M1'</li>
+    <li>Checkout ICU4C with tag 'milestone-53-0-1'</li>
+    <li>Checkout ICU4J with tag 'milestone-53-0-1'</li>
     <li>cd to <I>$icu4c_root</I>/source/data directory</li>
     <li>Follow the instructions in <I>$icu4c_root</I>/source/data/cldr-icu-readme.txt</li>
     <li>Rebuild ICU4C with the newly generated data.</li>
@@ -997,7 +997,7 @@ ICU4J data is built by ICU4C tools. Please see "icu4j-readme.txt" in <I>$icu4c_r
 </ol>
 
 <h3 class="doc"><a name="timezone"></a>About ICU4J Time Zone</h3>
-<p>ICU4J 52rc includes time zone data version 2013e, which is the latest one as of
+<p>ICU4J 53 milestone 1 includes time zone data version 2013i, which is the latest one as of
 the release date. However, time zone data is frequently updated in response
 to changes made by local governments around the world.  If you need to update
 the time zone data, please refer the ICU user guide topic
@@ -1035,7 +1035,7 @@ review all comments.</p>
 <h2>Thank you for your interest in ICU4J!</h2>
 <br>
 <hr align="center" size="2" width="100%">
-<p><I><font size="-1">Copyright &copy; 2002-2013 International Business
+<p><I><font size="-1">Copyright &copy; 2002-2014 International Business
 Machines Corporation and others. All Rights
 Reserved.<br>
 4400 North First Street, San Jos&eacute;, CA 95193, USA
