--- a/icu4j/branches/maint/eclipse-icu52/eclipse-build/misc/about_icu_base.html
+++ b/icu4j/branches/maint/eclipse-icu52/eclipse-build/misc/about_icu_base.html
@@ -8,7 +8,7 @@
 <body lang="EN-US">
 <h2>About This Content</h2>
  
-<p>XXXX XX, 2013</p>
+<p>February 12, 2014</p>
 <h3>License</h3>
 
 <p>The Eclipse Foundation makes available all content in this plug-in (&quot;Content&quot;).  Unless otherwise 
@@ -31,19 +31,19 @@ and such source code may be obtained at <a href="http://www.eclipse.org/">http:/
 		for informational purposes only, and you should look to the Redistributor's license for 
 		terms and conditions of use.</p>
 
-		<p><strong>ICU4J 52.X.X.v2013XXXX base plug-in</strong> <br/><br/>
+		<p><strong>ICU4J 52.1.0.v20140212 base plug-in</strong> <br/><br/>
 		The plug-in includes software (&quot;ICU4J&quot;) developed by International Business Machines
 		Corporation and others.
 		<br/><br/>
 		ICU4J is:
 		<blockquote>
-		Copyright (c) 1995-2013 International Business Machines Corporation and others<br/>
+		Copyright (c) 1995-2014 International Business Machines Corporation and others<br/>
 		All rights reserved. 
 		</blockquote>
 		<p>
 		Your use of ICU4J is subject to the terms and conditions of the ICU4J license.  A copy of the
-		license is contained in the file <a href="about_files/license.html" target="_blank">about_files/license.html</a>.</p>
-		<p>
+        ICU license and all relevant third party licenses are included in the file <a href="about_files/license.html" target="_blank">about_files/license.html</a>.		
+        <p>
 		The project information including source code, documentations and demo programs are available on
 		the <a href="http://www.icu-project.org">ICU public web site</a>.</p>
 
