--- a/icu4j/branches/maint/eclipse-icu52/readme.html
+++ b/icu4j/branches/maint/eclipse-icu52/readme.html
@@ -5,7 +5,7 @@
   <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
   <meta http-equiv="Content-Style-Type" content="text/css2">
   <title>ReadMe for ICU4J</title>
-  <meta name="COPYRIGHT" content="Copyright 2000-2013, International Business Machines Corporation and others. All Rights Reserved.">
+  <meta name="COPYRIGHT" content="Copyright 2000-2014, International Business Machines Corporation and others. All Rights Reserved.">
   <style type="text/css">
 h3.doc { background: #CCCCFF }
 h4.doc { text-decoration: underline }
@@ -15,7 +15,7 @@ h4.doc { text-decoration: underline }
  link="#0000ff" vlink="#800080">
 <h2>International Components for Unicode for Java (ICU4J)</h2>
 <h3>Read Me for ICU4J 52</h3>
-(Last Update: 2013-Oct-07)
+(Last Update: 2014-Feb-12)
 <hr size="2" width="100%">
 
 <p><b>Note:</b> This is major release of ICU4J. It contains bug fixes and adds implementations
@@ -992,7 +992,7 @@ ICU4J data is built by ICU4C tools. Please see "icu4j-readme.txt" in <I>$icu4c_r
 </ol>
 
 <h3 class="doc"><a name="timezone"></a>About ICU4J Time Zone</h3>
-<p>ICU4J 52.1 includes time zone data version 2013g, which is the latest one as of
+<p>ICU4J 52.1 includes time zone data version 2013i, which is the latest one as of
 the release date. However, time zone data is frequently updated in response
 to changes made by local governments around the world.  If you need to update
 the time zone data, please refer the ICU user guide topic
